# introducao_machine_learning

./: .gitignore  README.md  pyproject.toml
aula_1/: cerveja.ipynb  frutas.ipynb
aula_2/: cerveja.ipynb  clones.ipynb
aula_4/: metricas_de_performance.ipynb
aula_5/: aplicacao_pratica.ipynb
