[project]
name = "introducao-machine-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "André Strapazzão",email = "andrestrapazzao@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (==2.2.2)",
    "matplotlib (==3.8.4)",
    "scikit-learn (==1.4.2)",
    "pyarrow (==16.0.0)",
    "fastparquet (==2024.2.0)",
    "sqlalchemy (==2.0.30)",
    "openpyxl (==3.1.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
